# idea-scroller

./: .env.example  .gitignore  README.md  pyproject.toml  test_api.py
.playwright-mcp/: page-2026-04-12T06-19-11-784Z.yml  page-2026-04-12T06-55-22-455Z.yml
docs/superpowers/plans/: 2026-04-12-ideascroller.md
docs/superpowers/specs/: 2026-04-12-ideascroller-design.md
src/ideascroller/: __init__.py  __main__.py  analyzer.py  captcha.py  config.py  db.py  models.py  scraper.py  server.py
src/ideascroller/static/: index.html
tests/: test_analyzer.py  test_config.py  test_db.py  test_integration.py  test_models.py  test_scraper_utils.py  test_server.py
